107-mesos/files/rules.v4
# Generated by iptables-save v1.6.0 on Sat Jun 10 16:58:46 2017
*mangle
:PREROUTING ACCEPT [8967:28985224]
:INPUT ACCEPT [8967:28985224]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [7898:598820]
:POSTROUTING ACCEPT [7898:598820]
-A POSTROUTING -o lxcbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Sat Jun 10 16:58:46 2017
# Generated by iptables-save v1.6.0 on Sat Jun 10 16:58:46 2017
*nat
:PREROUTING ACCEPT [1:60]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [4:292]
:POSTROUTING ACCEPT [4:292]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o docker_gwbridge -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.0.3.0/24 ! -d 10.0.3.0/24 -j MASQUERADE
-A DOCKER -i docker_gwbridge -j RETURN
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sat Jun 10 16:58:46 2017
# Generated by iptables-save v1.6.0 on Sat Jun 10 16:58:46 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [7:741]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -d 224.0.0.0/4 -j DROP
-A INPUT -d 239.255.255.0/24 -j DROP
-A INPUT -d 240.0.0.0/5 -j DROP
-A INPUT -d 255.255.255.255/32 -j DROP
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -s 169.254.0.0/16 -j DROP
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -s 224.0.0.0/4 -j DROP
-A INPUT -s 240.0.0.0/5 -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p udp -m udp --sport 500 --dport 500 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p esp -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p ah -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 2376 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 2377 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 7946 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p udp -m udp --dport 7946 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p udp -m udp --dport 4789 -j ACCEPT
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker_gwbridge -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker_gwbridge -j DOCKER
-A FORWARD -i docker_gwbridge ! -o docker_gwbridge -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o lxcbr0 -j ACCEPT
-A FORWARD -i lxcbr0 -j ACCEPT
-A FORWARD -i docker_gwbridge -o docker_gwbridge -j DROP
-A OUTPUT -p tcp -m tcp --dport 587 -j DROP
-A OUTPUT -p tcp -m tcp --dport 465 -j DROP
-A OUTPUT -p tcp -m tcp --dport 25 -j DROP
-A OUTPUT -o lo -j ACCEPT
-A DOCKER-ISOLATION -i docker0 -o docker_gwbridge -j DROP
-A DOCKER-ISOLATION -i docker_gwbridge -o docker0 -j DROP
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Sat Jun 10 16:58:46 2017
